@@ -334,9 +334,10 @@ Backtrace:
   #{$!.backtrace.join("\n  ")}
 ---------------------------------------------------
 See:
- * http://www.rubydoc.info/gems/ruby-oci8/file/docs/install-full-client.md for Oracle full client
- * http://www.rubydoc.info/gems/ruby-oci8/file/docs/install-instant-client.md for Oracle instant client
- * http://www.rubydoc.info/gems/ruby-oci8/file/docs/report-installation-issue.md to report an issue.
+ * http://www.rubydoc.info/github/kubo/ruby-oci8/file/docs/install-full-client.md for Oracle full client
+ * http://www.rubydoc.info/github/kubo/ruby-oci8/file/docs/install-instant-client.md for Oracle instant client
+ * http://www.rubydoc.info/github/kubo/ruby-oci8/file/docs/install-on-osx.md for OS X
+ * http://www.rubydoc.info/github/kubo/ruby-oci8/file/docs/report-installation-issue.md to report an issue.
 
 EOS
       exc = RuntimeError.new
